# fqm-weil

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  entrypoint.sh  finite_quadratic_module.py  pyproject.toml  setup.cfg  setup.py  tox.ini  vector_complex_dense.pxd  vector_complex_dense.pyx  vector_real_mpfr_dense.pxd  vector_real_mpfr_dense.pyx  weil_invariants.pyx  weil_module.py  weil_module_alg.pyx
examples/: liftings.ipynb
src/fqm_weil/: __init__.py  all.py
src/fqm_weil/modular/: utils.py
src/fqm_weil/modules/: all.py  finite_quadratic_module.py  utils.pxd  utils.pyx  weil_invariants.pyx  weil_module.py  weil_module_element.py
src/fqm_weil/modules/finite_quadratic_module/: all.py  finite_quadratic_module_ambient.py  finite_quadratic_module_base.py  finite_quadratic_module_element.py  finite_quadratic_module_subgroup.py  jordan_decomposition.py  test_finite_quadratic_module.py
src/fqm_weil/modules/weil_module/: test_weil_module.py  utils.py  weil_module.py  weil_module_alg.pyx  weil_module_element.py
