[metadata]
name = fqm_weil
version = attr: fqm_weil.__version__
author = Fredrik Stromberg
author_email = fredrik314@gmail.com
url = https://github.com/fredstro/fqm_weil
description = Functions for Finite Quadratic Modules and Weil representations in SageMath. Algorithms and initial contributions by N.-P. Skoruppa.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL v3+
license_file = LICENSE
platform = any
keywords = "finite quadratic modules, weil representations"
classifiers =
      Development Status :: 4 - Beta
      Intended Audience :: Science/Research
      License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
      Operating System :: OS Independent
      Programming Language :: C
      Programming Language :: C++
      Programming Language :: Python
      Programming Language :: Cython
      Topic :: Scientific/Engineering :: Mathematics
project_urls =
    Bug Tracker = https://github.com/fredstro/fqm_weil/issues
    Source Code = https://github.com/fredstro/fqm_weil/

[options]
use_scm_version = True
packages = fqm_weil
package_dir=
    fqm_weil=src/fqm_weil
;install_requires =
;    cypari2 >=2.1.1
[sdist]
formats = gztar

[pycodestyle]
max-line-length = 99
statistics = True
count = True